--- a/TestAppOSX/Base.lproj/Main.storyboard
+++ b/TestAppOSX/Base.lproj/Main.storyboard
@@ -12,57 +12,13 @@
                 <application id="hnw-xV-0zn" sceneMemberID="viewController">
                     <menu key="mainMenu" title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
                         <items>
-                            <menuItem title="Testowa aplikacja" id="1Xt-HY-uBw">
+                            <menuItem title="2do" id="1Xt-HY-uBw">
                                 <modifierMask key="keyEquivalentModifierMask"/>
-                                <menu key="submenu" title="Testowa aplikacja" systemMenu="apple" id="uQy-DD-JDr">
+                                <menu key="submenu" title="2do" systemMenu="apple" id="uQy-DD-JDr">
                                     <items>
-                                        <menuItem title="About TestAppOSX" id="5kV-Vb-QxS">
-                                            <modifierMask key="keyEquivalentModifierMask"/>
-                                            <connections>
-                                                <action selector="orderFrontStandardAboutPanel:" target="Ady-hI-5gd" id="Exp-CZ-Vem"/>
-                                            </connections>
-                                        </menuItem>
-                                        <menuItem isSeparatorItem="YES" id="VOq-y0-SEH"/>
-                                        <menuItem title="Preferences…" keyEquivalent="," id="BOF-NM-1cW"/>
-                                        <menuItem isSeparatorItem="YES" id="wFC-TO-SCJ"/>
-                                        <menuItem title="Services" id="NMo-om-nkz">
-                                            <modifierMask key="keyEquivalentModifierMask"/>
-                                            <menu key="submenu" title="Services" systemMenu="services" id="hz9-B4-Xy5"/>
-                                        </menuItem>
-                                        <menuItem isSeparatorItem="YES" id="4je-JR-u6R"/>
-                                        <menuItem title="Hide TestAppOSX" keyEquivalent="h" id="Olw-nP-bQN">
-                                            <connections>
-                                                <action selector="hide:" target="Ady-hI-5gd" id="PnN-Uc-m68"/>
-                                            </connections>
-                                        </menuItem>
-                                        <menuItem title="Hide Others" keyEquivalent="h" id="Vdr-fp-XzO">
-                                            <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
-                                            <connections>
-                                                <action selector="hideOtherApplications:" target="Ady-hI-5gd" id="VT4-aY-XCT"/>
-                                            </connections>
-                                        </menuItem>
-                                        <menuItem title="Show All" id="Kd2-mp-pUS">
-                                            <modifierMask key="keyEquivalentModifierMask"/>
-                                            <connections>
-                                                <action selector="unhideAllApplications:" target="Ady-hI-5gd" id="Dhg-Le-xox"/>
-                                            </connections>
-                                        </menuItem>
-                                        <menuItem isSeparatorItem="YES" id="kCx-OE-vgT"/>
-                                        <menuItem title="Quit TestAppOSX" keyEquivalent="q" id="4sb-4s-VLi">
+                                        <menuItem title="Quit 2do" keyEquivalent="q" id="4sb-4s-VLi">
                                             <connections>
                                                 <action selector="terminate:" target="Ady-hI-5gd" id="Te7-pn-YzF"/>
-                                            </connections>
-                                        </menuItem>
-                                    </items>
-                                </menu>
-                            </menuItem>
-                            <menuItem title="Help" id="wpr-3q-Mcd">
-                                <modifierMask key="keyEquivalentModifierMask"/>
-                                <menu key="submenu" title="Help" systemMenu="help" id="F2S-fz-NVQ">
-                                    <items>
-                                        <menuItem title="TestAppOSX Help" keyEquivalent="?" id="FKE-Sm-Kum">
-                                            <connections>
-                                                <action selector="showHelp:" target="Ady-hI-5gd" id="y7X-2Q-9no"/>
                                             </connections>
                                         </menuItem>
                                     </items>
@@ -105,13 +61,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="480" height="661"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <webView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="50w-oq-FqW">
+                            <webView misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="50w-oq-FqW">
                                 <rect key="frame" x="0.0" y="0.0" width="480" height="661"/>
                                 <webPreferences key="preferences" defaultFontSize="16" defaultFixedFontSize="13" minimumFontSize="0">
                                     <nil key="identifier"/>
                                 </webPreferences>
                             </webView>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="50w-oq-FqW" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="1" id="2n9-08-ard"/>
+                            <constraint firstAttribute="bottom" secondItem="50w-oq-FqW" secondAttribute="bottom" constant="1" id="4CI-5b-qd9"/>
+                            <constraint firstAttribute="trailing" secondItem="50w-oq-FqW" secondAttribute="trailing" constant="1" id="GvA-ES-bt8"/>
+                            <constraint firstItem="50w-oq-FqW" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="1" id="O76-4g-Cvr"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="webView" destination="50w-oq-FqW" id="m6b-di-i2U"/>
